--- a/arch/openrisc/boot/dts/or1ksim.dts
+++ b/arch/openrisc/boot/dts/or1ksim.dts
@@ -6,12 +6,12 @@
 	interrupt-parent = <&pic>;
 
 	chosen {
-		bootargs = "console=uart,mmio,0x90000000,115200 root=/dev/vda";
+		bootargs = "console=uart,mmio,0x90000000,115200 root=/dev/nfs nfsroot=192.168.1.1:/home/bluecmd/or1k-devel/initramfs ip=::::or1k::dhcp::";
 	};
 
 	memory@0 {
 		device_type = "memory";
-		reg = <0x00000000 0x3f000000>;
+		reg = <0x00000000 0x02000000>;
 	};
 
 	cpus {
@@ -20,32 +20,8 @@
 		cpu@0 {
 			compatible = "opencores,or1200-rtlsvn481";
 			reg = <0>;
-			clock-frequency = <200000000>;
+			clock-frequency = <20000000>;
 		};
-	};
-
-	virtio_block@93000000 {
-		compatible = "virtio,mmio";
-		reg = <0x93000000 0x100>;
-		interrupts = <9>;
-	};
-
-	virtio_block@93000200 {
-		compatible = "virtio,mmio";
-		reg = <0x93000200 0x100>;
-		interrupts = <10>;
-	};
-
-	virtio_block@93000400 {
-		compatible = "virtio,mmio";
-		reg = <0x93000400 0x100>;
-		interrupts = <11>;
-	};
-
-	virtio_block@93000600 {
-		compatible = "virtio,mmio";
-		reg = <0x93000600 0x100>;
-		interrupts = <12>;
 	};
 
 	/*
@@ -63,7 +39,7 @@
 		compatible = "opencores,uart16550-rtlsvn105", "ns16550a";
 		reg = <0x90000000 0x100>;
 		interrupts = <2>;
-		clock-frequency = <200000000>;
+		clock-frequency = <20000000>;
 	};
 
 	enet0: ethoc@92000000 {
@@ -71,5 +47,4 @@
 		reg = <0x92000000 0x100>;
 		interrupts = <4>;
 	};
-
 };
